# ouster_obstacle_avoidance

./: CMakeLists.txt  package.xml
config/: ouster_obstacle_avoidance.yaml
include/ouster_obstacle_avoidance/: AvoidanceNode.hpp  ObstacleDetector.hpp  PotentialField.hpp  Types.hpp  VisualizationManager.hpp
launch/: ouster_obstacle_avoidance.launch
src/: AvoidanceNode.cpp  ObstacleDetector.cpp  PotentialField.cpp  VisualizationManager.cpp  main.cpp
