<?xml version="1.0"?>
<package format="2">
  <name>ouster_obstacle_avoidance</name>
  <version>0.1.0</version>
  <description>
    Lightweight LiDAR-based local obstacle avoidance watchdog for forest navigation.
    Uses Ouster OS1-128 range and near-IR images to detect obstacles within 1 m,
    computes a repulsive potential field, and publishes cmd_vel at higher priority
    than the global path controller but lower than the joystick.
  </description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>std_msgs</depend>
  <depend>message_filters</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <!-- jsoncpp — for parsing Ouster metadata JSON -->
  <depend>libjsoncpp-dev</depend>

  <exec_depend>twist_mux</exec_depend>
</package>
