<?xml version="1.0"?>
<package format="2">
  <name>ouster_obstacle_avoidance</name>
  <version>0.1.0</version>
  <description>
    Lightweight LiDAR-based local obstacle avoidance watchdog for forest navigation.
    Uses Ouster OS1-128 point cloud geometric (x, y, z) and "ambient" fields to detect obstacles within a set distance, computes a repulsive potential field, and publishes twist velocity commands at higher priority than the path-following controller but lower than the joystick.
  </description>

  <maintainer email="afonso.carvalho@isr.uc.pt">Afonso Carvalho</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <!-- jsoncpp — for parsing Ouster metadata JSON -->
  <depend>libjsoncpp-dev</depend>
</package>
